deployments/overlays/production-gke/keycloak-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: keycloak
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
            ephemeral-storage: 1Gi
          limits:
            cpu: 2000m
            memory: 2Gi
            ephemeral-storage: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10000
          capabilities:
            drop:
            - ALL
          runAsGroup: 10000
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: keycloak-data
          mountPath: /opt/keycloak/data
      volumes:
      - name: tmp
        emptyDir:
          sizeLimit: 500Mi
      - name: keycloak-data
        emptyDir:
          sizeLimit: 1Gi
